<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abhi.calculator.MainActivity">

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAlignment="viewEnd"
        android:maxLength="10"
        android:hint="0"
        android:digits="0123456789-."
        android:ems="10"
        android:inputType="numberSigned"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btnAC"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:textSize="30sp"
        android:background="#ADD8E6"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:text="@string/AC" />

    <Button
        android:id="@+id/btnsign"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:textSize="30sp"
        android:background="#ADD8E6"
        android:layout_alignBottom="@+id/btnAC"
        android:layout_toEndOf="@+id/btnAC"
        android:text="@string/sign" />

    <Button
        android:id="@+id/btnRoot"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:background="#ADD8E6"
        android:textSize="30sp"
        android:layout_below="@+id/editText"
        android:layout_toEndOf="@+id/btnsign"
        android:text="@string/root" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/btnRoot"
        android:background="#ADD8E6"
        android:layout_toEndOf="@+id/btnRoot"
        android:text="@string/divide" />

    <Button
        android:id="@+id/button7"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:textSize="30sp"
        android:background="#DCE1E1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnAC"
        android:text="@string/seven" />

    <Button
        android:id="@+id/button8"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:textSize="30sp"
        android:background="#DCE1E1"
        android:layout_below="@+id/btnsign"
        android:layout_toEndOf="@+id/button7"
        android:text="@string/eight" />

    <Button
        android:id="@+id/button9"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_below="@+id/btnRoot"
        android:textSize="30sp"
        android:background="#DCE1E1"
        android:layout_toEndOf="@+id/button8"
        android:text="@string/nine" />

    <Button
        android:id="@+id/button10"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_alignBottom="@+id/button9"
        android:background="#ADD8E6"
        android:textSize="30sp"
        android:layout_toEndOf="@+id/btnRoot"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/button12"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_below="@+id/button7"
        android:textSize="30sp"
        android:background="#DCE1E1"
        android:layout_toStartOf="@+id/button8"
        android:text="@string/six" />

    <Button
        android:id="@+id/button13"
        android:layout_width="90dp"
        android:textSize="30sp"
        android:layout_height="72dp"
        android:background="#DCE1E1"
        android:layout_below="@+id/button8"
        android:layout_toEndOf="@+id/button12"
        android:text="@string/five" />

    <Button
        android:id="@+id/button14"
        android:layout_width="90dp"
        android:textSize="30sp"
        android:layout_height="72dp"
        android:background="#DCE1E1"
        android:layout_below="@+id/button9"
        android:layout_toEndOf="@+id/button13"
        android:text="@string/four" />

    <Button
        android:id="@+id/button15"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_below="@+id/button10"
        android:textSize="30sp"
        android:background="#ADD8E6"
        android:layout_toEndOf="@+id/button14"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/button17"
        android:textSize="30sp"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:background="#DCE1E1"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button12"
        android:text="@string/three" />

    <Button
        android:id="@+id/button18"
        android:layout_width="90dp"
        android:textSize="30sp"
        android:layout_height="72dp"
        android:background="#DCE1E1"
        android:layout_above="@+id/button21"
        android:layout_toEndOf="@+id/button12"
        android:text="@string/two" />

    <Button
        android:id="@+id/button19"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:background="#DCE1E1"
        android:layout_below="@+id/button14"
        android:textSize="30sp"
        android:layout_toEndOf="@+id/button13"
        android:text="@string/one" />

    <Button
        android:id="@+id/button20"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:background="#ADD8E6"
        android:textSize="30sp"
        android:layout_below="@+id/button15"
        android:layout_toEndOf="@+id/button14"
        android:text="@string/add" />

    <Button
        android:id="@+id/button21"
        android:layout_width="90dp"
        android:textSize="30sp"
        android:layout_height="72dp"
        android:background="#ADD8E6"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button17"
        android:text="@string/back" />

    <Button
        android:id="@+id/button22"
        android:layout_width="90dp"
        android:textSize="30sp"
        android:layout_height="72dp"
        android:background="#DCE1E1"
        android:layout_below="@+id/button17"
        android:layout_toEndOf="@+id/button17"
        android:text="@string/zero" />

    <Button
        android:id="@+id/button23"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_below="@+id/button19"
        android:background="#ADD8E6"
        android:textSize="30sp"
        android:layout_toEndOf="@+id/button18"
        android:text="@string/dot" />

    <Button
        android:id="@+id/button24"
        android:layout_width="90dp"
        android:textSize="30sp"
        android:layout_height="72dp"
        android:background="#4F80B7"
        android:layout_below="@+id/button20"
        android:layout_toEndOf="@+id/button19"
        android:text="@string/equals" />

</RelativeLayout>
